1. Fixed - Logs were displaying hard coded tests 2. Fixed - NumericUpDown control was showing values in decimal 3. added more functions to ILoggerService 4. Made all the models as per avalonia's community MVVM toolkit 5. Fixed - LOGS autoscroll to the bottom 6. Fixed - All Checkbox's Use-cases fixed 7. Fixed - Status color when test case is executed 8. added Interop.SBC dll from lib folder

--- a/SBC.WPF/SBC.WPF.csproj
+++ b/SBC.WPF/SBC.WPF.csproj
@@ -41,4 +41,13 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Interop.SBC">
+      <HintPath>..\lib\Interop.SBC.dll</HintPath>
+      <Private>False</Private>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
+  </ItemGroup>
 </Project>
