--- a/SBC.WPF/SBC.WPF.csproj
+++ b/SBC.WPF/SBC.WPF.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <None Remove="Resources\Data\Tests.json" />
+    <None Remove="Resources\Docs\SBC.chm" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +40,9 @@
   <ItemGroup>
     <Content Include="Resources\Data\Tests.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Docs\SBC.chm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
