1. SCRUM-13 / SCRUM-85 Avalonia - Implement Splash screen
2. SCRUM-107 / SCRUM-104 Styling of buttons

3. Review Points:

3.1. Use TestCases the backing field as we shouldn't directly use the observable property
3.2. Either make "Message" a required field or provide some initial value
3.3. Pick resources from the dictionary and remove hard-coded
3.4. Remove converter warning, apply null to object
3.5. Keep all the resources in dictionary instead of keeping them separate in the app.axaml class
3.6. When the data context is same, why we are firing the command from code-behind? Use bindings.
3.7. In case settings json is null avoid the null exception
3.8. Using these methods Serial Port is only supported on Windows, see and make this support for all the platforms
3.9. Selected protocol should be nullable
3.10. Don’t make DI-injected fields public unless there's a good reason. Also, either use a property (read-only if needed) or private field
3.11. SelectedTestGroup = TestGroups.FirstOrDefault(); this should be out of the loop
3.12. Missing null checks to safe guard the RunTest command
3.13. await the _ = Initialize(); as this can result in error if something crashes in initilaize
3.14. App resize is not working as expected
3.15. Common styles are missing
3.16. There is no user waring message on closing the app

--- a/SBC.WPF/SBC.WPF.csproj
+++ b/SBC.WPF/SBC.WPF.csproj
@@ -23,6 +23,7 @@
     <None Remove="Resources\Icons\LFT logo.svg" />
     <None Remove="Resources\Icons\Maximise.svg" />
     <None Remove="Resources\Icons\Minimize.svg" />
+    <None Remove="Resources\Icons\questionMark.png" />
     <None Remove="Resources\Icons\Restore Down.svg" />
     <None Remove="Resources\Icons\Sub Menu - Selected.svg" />
     <None Remove="Resources\Icons\Sub Menu.svg" />
@@ -43,6 +44,7 @@
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
@@ -61,6 +63,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <AvaloniaResource Include="Resources\Icons\appicon.ico" />
+    <AvaloniaResource Include="Resources\Icons\questionMark.png" />
     <Content Include="Resources\Icons\Close Vector.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
