--- a/SBC.WPF/SBC.WPF.csproj
+++ b/SBC.WPF/SBC.WPF.csproj
@@ -16,10 +16,13 @@
     <None Remove="Assets\SBCSplashScreen3.1.jpg" />
     <None Remove="Resources\Data\Tests.json" />
     <None Remove="Resources\Docs\SBC.chm" />
+    <None Remove="Resources\Docs\SBC.pdf" />
     <None Remove="Resources\Icons\appicon.ico" />
     <None Remove="Resources\Icons\Close Vector.svg" />
+    <None Remove="Resources\Icons\ErrorIcon.png" />
     <None Remove="Resources\Icons\EtherNet Vector - Connected.svg" />
     <None Remove="Resources\Icons\EtherNet Vector.svg" />
+    <None Remove="Resources\Icons\exitAppIcon.png" />
     <None Remove="Resources\Icons\LFT logo.svg" />
     <None Remove="Resources\Icons\Maximise.svg" />
     <None Remove="Resources\Icons\Minimize.svg" />
@@ -29,6 +32,10 @@
     <None Remove="Resources\Icons\Sub Menu.svg" />
     <None Remove="Resources\Icons\VGA Vector - Connected.svg" />
     <None Remove="Resources\Icons\VGA Vector.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Include="Resources\Icons\exitAppIcon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,15 +50,14 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
-    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="RJCP.SerialPortStream" Version="3.0.3" />
+    <PackageReference Include="SkiaSharp" Version="3.119.0" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.119.0" />
     <PackageReference Include="Svg.Skia" Version="3.0.3" />
-    <PackageReference Include="System.IO.Ports" Version="9.0.5" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.6" />
     <PackageReference Include="System.Text.Json" Version="9.0.4" />
   </ItemGroup>
 
@@ -63,7 +69,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <AvaloniaResource Include="Resources\Icons\appicon.ico" />
+    <AvaloniaResource Include="Resources\Icons\ErrorIcon.png" />
     <AvaloniaResource Include="Resources\Icons\questionMark.png" />
+    <Content Include="Resources\Docs\SBC.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Icons\Close Vector.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
