1. SCRUM-11 SCRUM-142  Implementation for windows Installer project
2. SCRUM-13 SCRUM-128
 (PARTIAL INTEGRATION) Integrate Linux API in SBC avalonia app

3. Re-factored code

--- a/SBC.WPF/SBC.WPF.csproj
+++ b/SBC.WPF/SBC.WPF.csproj
@@ -112,4 +112,14 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Interop.SBC">
+      <HintPath>..\lib\Interop.SBC.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <Aliases>global</Aliases>
+      <Private>False</Private>
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
+  </ItemGroup>
 </Project>
